@@ -1,3 +1,9 @@
+2002-12-24  Murray Cumming  <murrayc@usa.net>
+
+	* moduleinfo.py (gnome22): Replaced the gnome22 gnome-meta-desktop
+	metamodule with one that includes the new modules such as acme, 
+	file-roller, gstreamer, and nautilus-media.
+
 2002-12-24  James Henstridge  <james@daa.com.au>
 
 	* moduleinfo.py (gnome22.fcpackage): add fcpackage to gnome22
